# rs_webserver_game

./: Cargo.toml  Readme  game.html  index.html
src/: common.rs  game_server.rs  main.rs  web_server.rs
src/game/: main.rs
src/web/: main.rs
