[package]
name = "server-tictac"
version = "0.1.0"
authors = ["Luke Jones <luke.nukem.jones@gmail.com>"]

[[bin]]
name = "web_server"
path = "src/web/main.rs"

[[bin]]
name = "game_server"
path = "src/game/main.rs"

[dependencies]
iron = "0.5.*"
mime = "0.2.*"
router = "0.5.*"
params = "0.6.*"
rustc-serialize = "*"
