[package]
name = "server-tictac"
version = "0.1.0"
authors = ["Luke Jones <luke.nukem.jones@gmail.com>"]

[[bin]]
name = "web_server"
path = "src/web_server.rs"

[[bin]]
name = "game_server"
path = "src/game_server.rs"

[lib]
name = "common"
path = "src/common.rs"

[dependencies]
rustc-serialize = "*"
